Prevents command injections when opening links